<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Menu for the action mode invoked when items are selected
     in the conversation list. Order is important!  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/archive"
        android:title="@string/archive"
        app:showAsAction="always"
        android:icon="@drawable/ic_archive_wht_24dp" />

    <item
        android:id="@+id/remove_folder"
        android:title="@string/remove_folder"
        app:showAsAction="always"
        android:icon="@drawable/ic_remove_label_wht_24dp"
        android:visible="false" />

    <!-- Depends on FolderCapabilities.DELETE -->
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_wht_24dp" />

    <!-- Depends on the user viewing a draft label, and the above menu item not being shown -->
    <item
        android:id="@+id/discard_drafts"
        android:title="@string/discard_drafts"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_wht_24dp"
        android:visible="false" />
    <!-- Depends on the user viewing a outbox label and the setting supports delete -->
    <item
        android:id="@+id/discard_outbox"
        android:title="@string/discard_failed"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_wht_24dp"
        android:visible="false" />

    <!-- Only one of mark read or mark unread is shown. -->
    <item
        android:id="@+id/read"
        android:title="@string/mark_read"
        app:showAsAction="always"
        android:icon="@drawable/ic_mark_read_wht_24dp" />

    <item
        android:id="@+id/unread"
        android:title="@string/mark_unread"
        app:showAsAction="always"
        android:icon="@drawable/ic_mark_unread_wht_24dp" />

    <item
        android:id="@+id/move_to"
        android:title="@string/menu_move_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_move_to_wht_24dp" />

    <item
        android:id="@+id/change_folders"
        app:showAsAction="never"
        android:title="@string/menu_change_folders"
        android:icon="@drawable/ic_change_labels_wht_24dp" />

    <item
        android:id="@+id/move_to_inbox"
        app:showAsAction="never"
        android:title="@string/menu_move_to_inbox"
        android:icon="@drawable/ic_move_to_inbox_wht_24dp" />

    <item android:id="@+id/star"
        android:title="@string/add_star"
        app:showAsAction="never" />

    <item android:id="@+id/remove_star"
        android:title="@string/remove_star"
        app:showAsAction="never" />

    <item
        android:id="@+id/mark_important"
        android:title="@string/mark_important"
        app:showAsAction="never" />

    <item
        android:id="@+id/mark_not_important"
        android:title="@string/mark_not_important"
        app:showAsAction="never" />

    <!-- Availability based on account -->
    <item
        android:id="@+id/mute"
        android:title="@string/mute"
        app:showAsAction="never" />

    <!-- Availability based on account -->
    <item
        android:id="@+id/report_spam"
        android:title="@string/report_spam"
        app:showAsAction="never" />
    <!-- Availability based on account -->
    <item
        android:id="@+id/mark_not_spam"
        android:title="@string/mark_not_spam"
        app:showAsAction="never" />
    <!-- Availability based on account -->
    <item
        android:id="@+id/report_phishing"
        android:title="@string/report_phishing"
        app:showAsAction="never" />

</menu>
