<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/edit_draft"
        style="@style/MessageHeaderActionButtonStyle"
        android:visibility="gone"
        android:src="@drawable/ic_pencil_24dp"
        android:contentDescription="@string/resume_draft" />
    <ImageView
        android:id="@+id/reply"
        style="@style/MessageHeaderActionButtonStyle"
        android:src="@drawable/ic_reply_24dp"
        android:contentDescription="@string/reply" />
    <ImageView
        android:id="@+id/reply_all"
        style="@style/MessageHeaderActionButtonStyle"
        android:src="@drawable/ic_reply_all_24dp"
        android:contentDescription="@string/reply_all" />
    <ImageView
        android:id="@+id/forward"
        style="@style/MessageHeaderActionButtonStyle"
        android:src="@drawable/ic_forward_24dp"
        android:contentDescription="@string/forward" />
    <ImageView
        android:id="@+id/overflow"
        style="@style/MessageHeaderOverflowButtonStyle"
        android:src="@drawable/ic_overflow_24dp"
        android:contentDescription="@string/overflow_description" />
</merge>
