<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.android.mail.browse.ConversationFooterView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@android:color/white" >

    <include layout="@layout/conversation_view_border" />

    <LinearLayout
        android:id="@+id/footer_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/conversation_border_margin_side"
        android:layout_marginRight="@dimen/conversation_border_margin_side" >

        <TextView
            android:id="@+id/reply_button"
            android:drawableTop="@drawable/ic_reply_24dp"
            android:focusable="true"
            android:text="@string/reply"
            style="@style/ConversationFooterButtonStyle" />

        <TextView
            android:id="@+id/reply_all_button"
            android:drawableTop="@drawable/ic_reply_all_24dp"
            android:focusable="true"
            android:text="@string/reply_all"
            style="@style/ConversationFooterButtonStyle" />

        <TextView
            android:id="@+id/forward_button"
            android:drawableTop="@drawable/ic_forward_24dp"
            android:focusable="true"
            android:text="@string/forward"
            style="@style/ConversationFooterButtonStyle" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

</com.android.mail.browse.ConversationFooterView>
