<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/widget_margin_top"
    android:layout_marginLeft="@dimen/widget_margin_left"
    android:layout_marginRight="@dimen/widget_margin_right"
    android:layout_marginBottom="@dimen/widget_margin_bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/widget_header_bg_color"
        style="@style/WidgetHeaderStartMargin">
        <TextView
            android:id="@+id/widget_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:freezesText="true"
            android:textAlignment="viewStart"
            android:includeFontPadding="false"
            style="@style/WidgetTitle"/>
        <ImageButton
            android:id="@+id/widget_compose"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/ic_pencil_wht_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/compose" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_configuration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/gradient_bg_widget_holo"
        android:visibility="gone">
        <ImageView
            android:src="@mipmap/ic_launcher_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dip" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_configure"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <ListView
        android:id="@+id/conversation_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:background="@drawable/gradient_bg_widget_holo"
        style="@style/WidgetConversationListFade" />
    <TextView
        android:id="@+id/empty_conversation_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/loading_conversations"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/gradient_bg_widget_holo"
        android:visibility="gone" />
    <LinearLayout android:id="@+id/widget_folder_not_synced"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/gradient_bg_widget_holo"
            android:visibility="gone" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:text="@string/non_synced_folder_description"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:text="@string/tap_to_configure_folder_sync"
            android:textColor="@android:color/black"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
