<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quoted_text_area"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View android:id="@+id/upper_quotedtext_divider_bar"
        android:visibility="gone"
        style="@style/DefaultDividerStyle" />

    <LinearLayout android:id="@+id/quoted_text_button_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="0dp"
        style="@style/ComposeFieldContent">

        <CheckBox android:id="@+id/hide_quoted_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/quoted_text"
            android:drawablePadding="12dp"
            android:ellipsize="end"
            android:text="@string/quoted_text_label"
            android:textColor="@color/compose_label_text"
            android:textSize="14sp"
            style="@style/QuotedTextCheckbox" />

        <!--  Respond Inline -->
        <Button android:id="@+id/respond_inline_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/respond_inline"
            android:textAllCaps="true"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider_bar"
        style="@style/DefaultDividerStyle" />

    <WebView android:id="@+id/quoted_text_web_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:focusableInTouchMode="false"
        android:focusable="false" />

</LinearLayout>
